v2.4.26
----------------------------------------------------------------------------------------------------
 * Using OCSP stapling information to trigger certificate renewals. Proposed
   by Fraser Tweedale.
 * Added directive `MDCheckInterval` to control how often the server checks
   for detected revocations. Added proposals for configurations in the
   README.md chapter "Revocations".
 * OCSP stapling: accept OCSP responses without a `nextUpdate` entry which is
   allowed in RFC 6960. Treat those as having an update interval of 12 hours.
   Added by @frasertweedale.
 * Adapt OpenSSL usage to changes in their API. By Yann Ylavic.

v2.4.25
----------------------------------------------------------------------------------------------------
 * Fix the reported "until" validity of a certificate in the status handler.
   [Rainer Jung]
 * Fix possible NULL deref when logging the error that an authentication
   resource could not be retrieved from the ACME server. Refs #324

v2.4.24
----------------------------------------------------------------------------------------------------
 * Fixed passing of the server environment variables to programs started via
   MDMessageCmd and MDChallengeDns01 on *nix system. See #319.

v2.4.23
----------------------------------------------------------------------------------------------------
 * New directive `MDMatchNames all|servernames` to allow more control over how
   MDomains are matched to VirtualHosts.
 * New directive `MDChallengeDns01Version`. Setting this to `2` will provide
   the command also with the challenge value on `teardown` invocation. In version
   1, the default, only the `setup` invocation gets this parameter.
   Refs #312. Thanks to @domrim for the idea.

v2.4.22
----------------------------------------------------------------------------------------------------
 * For Managed Domain in "manual" mode, the checks if all used ServerName and